# hexlet-git

./: index.html  style.css
first/: pyproject.toml
hello/: pyproject.toml
hello/hello/scripts/: say_hello.py
hexlet html-css/lesson1/: index.html  style.css
основы верстки/css/: main.css
основы верстки/html/: Паша_index.html
