[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["Pavel <arisesinmight@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"
colorama = "^0.4.5"

[tool.poetry.scripts]
say-hello = "hello.scripts.say_hello:main"


[tool.poetry.group.dev.dependencies]
ipython = "8.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
